bk_ida/gccida/g0/init_EXPR_INSN_LIST_cache
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_EXPR_INSN_LIST_cache/src/lists.c:586:61: error: use of undeclared identifier 'json_end_group'
ggc_add_root( &unused_expr_list, 1, 1, ( void ( *)( void *))json_end_group); 
                                                            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_EXPR_INSN_LIST_cache/src/obj/lists.o] Error 1
